--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0" />
-    <title>Drag Drop Todo</title>
+    <title>Drag & Drop Todo</title>
   </head>
   <body>
     <div id="root"></div>
